--- a/index.html
+++ b/index.html
@@ -18,12 +18,25 @@
     <script>
         
         function initMap(){
+            const myPosition = {lat: 32.1836, lng: 34.87386}
+
+            //Map options
             var options ={
-                zoom : 8,
-                center: {lat: 42.3601, lng: -71.0589}
+                zoom : 16,
+                center: myPosition
                
             } 
+
+            //new map
              var map = new google.maps.Map(document.getElementById('map') , options)
+
+            //add marker
+             var marker = new google.maps.Marker({
+                 position : myPosition,
+                 map,
+                 title : "Hello",
+                 icon : 
+             })
 
         }
 
