--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
     <h1>My Google Map</h1>
     <div id="map"></div>
     <script>
+
+        //map = new google.maps.Map(document.getElementById("map"), {
+           //center: new google.maps.LatLng(-33.91722, 151.23064),
+          //zoom: 16,
+         //});
+        //new google.maps.LatLng(-33.91721, 151.2263)
+
+    //     const marker = new google.maps.Marker({
+    //   position: features[i].position,
+    //   icon: icons[features[i].type].icon,
+    //   map: map,
+    // });
         
         function initMap(){
             const myPosition = {lat: 32.1836, lng: 34.87386}
@@ -31,12 +43,37 @@
              var map = new google.maps.Map(document.getElementById('map') , options)
 
             //add marker
-             var marker = new google.maps.Marker({
-                 position : myPosition,
+            const iconBase ="https://developers.google.com/maps/documentation/javascript/examples/full/images/";
+
+             addMarker({coords : {lat: 32.1836, lng: 34.87386} ,
+                        iconImage : iconBase + 'parking_lot_maps.png' , 
+                        info : '<h1>Raanana</h1>'})
+            
+            addMarker({coords : {lat: 32.1850, lng: 34.87400} ,
+            iconImage : iconBase + 'library_maps.png' , 
+            info : '<h1>Tel aviv</h1>'})
+
+             addMarker({coords : {lat: 32.1800, lng: 34.87000} ,
+             iconImage : iconBase + 'info-i_maps.png' , 
+             info : '<h1>Hasharon</h1>'})
+
+             function addMarker(props){
+                var marker = new google.maps.Marker({
+                 position :props.coords,
                  map,
-                 title : "Hello",
-                 icon : 
+                 icon : props.iconImage
              })
+
+              //infoWindow
+              var infoWindow = new google.maps.InfoWindow({
+                 content : props.info
+             });
+
+             marker.addListener('click' , function(){
+                 infoWindow.open(map , marker)
+             })
+
+             }
 
         }
 
